# skillseraph

./: .gitignore  CHANGELOG.md  Dockerfile  QUICKSTART.md  README.md  ROADMAP.md  action.yml  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml  scan.yml
deploy/k8s/: configmap-clean.yaml  configmap-poisoned.yaml  init-container-example.yaml  test-gate.sh
deploy/k8s/admission/: README.md  manifests.yaml
src/skillseraph/: __init__.py  __main__.py  baseline.py  cli.py  correlator.py  models.py  platforms.py  policy_gen.py  rules_engine.py  scanner.py  watcher.py  webhook.py
src/skillseraph/checks/: __init__.py  authority_fabrication.py  automation_triggers.py  breakglass.py  config_inheritance.py  encoding.py  exfiltration.py  injection.py  mcp_servers.py  permission_bypass.py  persistence.py  runtime_bypass.py  skill_invocation.py  suppression.py  tool_abuse.py  urls.py
src/skillseraph/rules/: authority_fabrication.yaml  automation_triggers.yaml  breakglass.yaml  config_inheritance.yaml  encoding.yaml  exfiltration.yaml  injection.yaml  mcp_servers.yaml  permission_bypass.yaml  persistence.yaml  runtime_bypass.yaml  skill_invocation.yaml  suppression.yaml  (+1 more)
tests/: test_advanced_checks.py  test_baseline.py  test_changed_only.py  test_checks.py  test_extended_coverage.py  test_j3_j5.py  test_mcp_servers.py  test_policy_gen.py  test_rules_engine.py  test_scanner.py
tests/fixtures/: benign_skill.md  dep_planted_agents.md  j3_broad_automation.yml  j5_parent_include.md  poisoned_hooks.json  poisoned_skill.md  poisoned_skill_invocation.md
