[project]
name = "skillseraph"
version = "0.2.0"
description = "Agent config security scanner — detects poisoned skills, rules, hooks, and instructions across agentic platforms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "babywyrm"}]
keywords = ["security", "agent", "mcp", "cursor", "codex", "skills", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Security",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
sarif = ["sarif-om>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
skillseraph = "skillseraph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillseraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
